Update index.html for SEO.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, 
         user-scalable=no">
     <link rel="stylesheet" href="style.css">
+    <meta name="description" content="This page is Pradeep Kumar's Portfolio site">
+    <meta name="keywords" content="pradeepsyadav,Pradeep Kumar Yadav,Pradeep Kumar Yadav Portfolio">
     <title>Portfolio | Pradeep Kumar Yadav | Software Engineer</title>
     <link rel="icon" type="image/x-icon" href="./images/profile_photo_pradeep.jpg">
 </head>
